Format topics and keywords on episodes as badges

--- a/css/style.css
+++ b/css/style.css
@@ -8491,7 +8491,7 @@ table .checkbox input[type="checkbox"] {
   display: inline-block;
   padding: 5px;
   margin: 0 5px 5px 0;
-  background: #333333;
+  background: #02426f;
   color: white;
 }
 .content-region .block-system .block-panel .content .field-name-field-topic .field-item:empty,
