--- a/less/content.less
+++ b/less/content.less
@@ -537,7 +537,7 @@
 				display: inline-block;
 				padding: 5px;
 				margin: 0 5px 5px 0;
-				background: @text-color;
+				background: @cbf-dark-blue;
 				color: white;
 			}
 		}
