Run an episode's topics and keywords together as inline elements

--- a/css/style.css
+++ b/css/style.css
@@ -8436,7 +8436,6 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-in-activity,
 .content-region .block-system .block-panel .content .field-name-field-date-text,
 .content-region .block-system .block-panel .content .field-name-field-episode-date,
-.content-region .block-system .block-panel .content .field-name-field-topics,
 .content-region .block-system .block-panel .content .field-name-field-image,
 .content-region .block-system .block-panel .content .field-name-field-series-image,
 .content-region .block-system .block-panel .content .field-name-field-attachment,
@@ -8445,6 +8444,10 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-video,
 .content-region .block-system .block-panel .content .field-name-field-civievent {
   margin-bottom: 25px;
+}
+.content-region .block-system .block-panel .content .field-name-field-topic + .field-name-body,
+.content-region .block-system .block-panel .content .field-name-field-topics + .field-name-body {
+  margin-top: 25px;
 }
 .content-region .block-system .block-panel .content .field-name-field-add-to-calendar {
   margin-bottom: 0px;
@@ -8471,12 +8474,17 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-episode-date .field-items {
   width: 70%;
 }
+.content-region .block-system .block-panel .content .field-name-field-topic,
+.content-region .block-system .block-panel .content .field-name-field-topics {
+  display: inline;
+}
 .content-region .block-system .block-panel .content .field-name-field-topic .field-label,
 .content-region .block-system .block-panel .content .field-name-field-topics .field-label {
   display: none;
 }
 .content-region .block-system .block-panel .content .field-name-field-topic .field-item,
 .content-region .block-system .block-panel .content .field-name-field-topics .field-item {
+  display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
   font-size: 12px;
@@ -8488,7 +8496,7 @@ table .checkbox input[type="checkbox"] {
   text-align: center;
   background-color: #999999;
   border-radius: 10px;
-  display: inline-block;
+  display: inline;
   padding: 5px;
   margin: 0 5px 5px 0;
   background: #02426f;
