--- a/less/content.less
+++ b/less/content.less
@@ -538,9 +538,13 @@
 				display: none;
 			}
 
+			.field-items {
+				display: inline;
+			}
+
 			.field-item {
 				.badge;
-				display: inline;
+				display: inline-block;
 				padding: 5px;
 				margin: 0 5px 5px 0;
 				background: @cbf-dark-blue;
