--- a/less/header.less
+++ b/less/header.less
@@ -218,12 +218,10 @@
 						right: 0;
 
 						.ministry-centre {
+							display: block;
 							font-size: @font-size-h4;
-							padding-bottom: 8px;
-
-							a {
-								font-style: italic;
-							}
+							padding-top: 8px;
+							font-style: italic;
 						}
 
 						// Mobile:
