--- a/less/content.less
+++ b/less/content.less
@@ -330,6 +330,16 @@
 		}
 	}
 
+	.block-views,
+	.block-block {
+		.block-panel {
+			.video-filter {
+				width: 100%;
+				height: auto;
+			}
+		}
+	}
+
 	.block-block .block-panel {
 		padding: 0 10px 10px 10px;
 
@@ -615,7 +625,6 @@
 				width: 560px;
 				height: 312px;
 			}
-
 		}
 	}
 
