--- a/css/style.css
+++ b/css/style.css
@@ -6570,19 +6570,19 @@ table .checkbox input[type="checkbox"] {
 @media (min-width: 768px) {
   #navbar .navbar-header {
     float: left;
-    width: 41.66666666666667%;
+    width: 33.33333333333333%;
   }
 }
 @media (min-width: 992px) {
   #navbar .navbar-header {
     float: left;
-    width: 41.66666666666667%;
+    width: 33.33333333333333%;
   }
 }
 @media (min-width: 1200px) {
   #navbar .navbar-header {
     float: left;
-    width: 41.66666666666667%;
+    width: 33.33333333333333%;
   }
 }
 #navbar .navbar-header .logo {
@@ -6647,24 +6647,31 @@ table .checkbox input[type="checkbox"] {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  max-height: none;
 }
 @media (min-width: 768px) {
   #navbar .navbar-collapse {
     float: left;
-    width: 58.333333333333336%;
+    width: 66.66666666666666%;
   }
 }
 @media (min-width: 992px) {
   #navbar .navbar-collapse {
     float: left;
-    width: 58.333333333333336%;
+    width: 66.66666666666666%;
   }
 }
 @media (min-width: 1200px) {
   #navbar .navbar-collapse {
     float: left;
-    width: 58.333333333333336%;
+    width: 66.66666666666666%;
   }
+}
+#navbar .navbar-collapse.in {
+  overflow-y: hidden;
+}
+#navbar .navbar-collapse .navbar-nav {
+  margin: 0;
 }
 #navbar .navbar-collapse .navbar-nav .active {
   font-weight: bold;
@@ -6675,38 +6682,46 @@ table .checkbox input[type="checkbox"] {
 }
 @media screen and (min-width: 768px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
-    padding: 24px 5px 10px;
+    padding: 18px 5px 0px;
   }
 }
 @media screen and (min-width: 992px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
     font-size: 18px;
-    padding: 26px 7px 10px;
+    padding: 20px 7px 0px;
   }
 }
 @media screen and (min-width: 1200px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
     font-size: 22px;
-    padding: 30px 10px 10px;
+    padding: 22px 10px 0px;
   }
 }
 #navbar .navbar-collapse .region-navigation {
   float: right;
-  width: 271px;
+  width: 285px;
+}
+@media screen and (min-width: 768px) {
+  #navbar .navbar-collapse .region-navigation {
+    width: 271px;
+  }
 }
 @media screen and (min-width: 992px) {
   #navbar .navbar-collapse .region-navigation {
-    width: 282px;
+    width: 281px;
   }
 }
 @media screen and (min-width: 1200px) {
   #navbar .navbar-collapse .region-navigation {
-    width: 251px;
+    width: 250px;
   }
+}
+#navbar .navbar-collapse .region-navigation .block-search {
+  margin: 0 0 0 5px;
 }
 @media screen and (min-width: 768px) {
   #navbar .navbar-collapse .region-navigation .block-search .block-panel {
-    margin-top: 10px;
+    margin-top: 15px;
     margin-right: -15px;
   }
 }
