--- a/less/header.less
+++ b/less/header.less
@@ -1,9 +1,9 @@
 #navbar {
 	.navbar-header {
 		.make-xs-column(12);
-		.make-sm-column(5);
-		.make-md-column(5);
-		.make-lg-column(5);
+		.make-sm-column(4);
+		.make-md-column(4);
+		.make-lg-column(4);
 
 		.logo {
 			// Mobile:
@@ -44,11 +44,19 @@
 	}
 
 	.navbar-collapse {
-		.make-sm-column(7);
-		.make-md-column(7);
-		.make-lg-column(7);
+		.make-sm-column(8);
+		.make-md-column(8);
+		.make-lg-column(8);
+
+		max-height: none;
+		
+		&.in {
+			overflow-y: hidden;
+		}
 
 		.navbar-nav {
+			margin: 0;
+
 			.active {
 				font-weight: bold;
 				background-color: inherit;
@@ -56,18 +64,18 @@
 
 			.leaf {
 				a {
-					padding: 5px;
-
+					// Mobile:
+						padding: 5px;
 					@media @tablet {
-						padding: 24px 5px 10px;
+						padding: 18px 5px 0px;
 					}
 					@media @normal {
 						font-size: @font-size-h3;
-						padding: 26px 7px 10px;
+						padding: 20px 7px 0px;
 					}
 					@media @wide {
 						font-size: @font-size-h1;
-						padding: 30px 10px 10px;
+						padding: 22px 10px 0px;
 					}
 				}
 			}
@@ -78,36 +86,43 @@
 
 			// Make the Search Form the correct width in Chrome
 			// Mobile
-				width: 271px; 
+				width: 285px; 
+			@media @tablet {
+				width: 271px;
+			}
 			@media @normal {
-				width: 282px;
+				width: 281px;
 			}
 			@media @wide {
-				width: 251px;
+				width: 250px;
 			}
 
-			.block-search .block-panel {
-				@media @tablet {
-					margin-top: 10px;
-					margin-right: -15px;
-				}
+			.block-search {
+				margin: 0 0 0 5px;
 
-				.form-control {
-					color: @gray-light;
-	
-					// Make the Search Form the correct width in Firefox
-					// Mobile
-						width: 210px; 
-					@media @normal {
-						width: 221px;
+				.block-panel {
+					@media @tablet {
+						margin-top: 15px;
+						margin-right: -15px;
 					}
-					@media @wide {
-						width: 190px;
-					}
-				}
 
-				.btn {
-					color: @navbar-default-link-color;
+					.form-control {
+						color: @gray-light;
+
+						// Make the Search Form the correct width in Firefox
+						// Mobile
+							width: 210px; 
+						@media @normal {
+							width: 221px;
+						}
+						@media @wide {
+							width: 190px;
+						}
+					}
+
+					.btn {
+						color: @navbar-default-link-color;
+					}
 				}
 			}
 		}
