--- a/less/content.less
+++ b/less/content.less
@@ -16,7 +16,7 @@
 		}
 
 		i + .title-text {
-	 		margin-left: 60px;
+			margin-left: 60px;
 		}
 	}
 
@@ -160,7 +160,7 @@
 				}
 
 				i + .title-text {
-			 		margin-left: 60px;
+					margin-left: 60px;
 				}
 			}
 
@@ -171,7 +171,7 @@
 				}
 
 				i + .title-text {
-			 		margin-left: 35px;
+					margin-left: 35px;
 				}
 			}
 
@@ -194,7 +194,7 @@
 				.well;
 				.h1;
 
-				padding-left: 70px;
+				padding-left: 74px; /* 15px view-content + 60px views-field - 1px border*/
 
 				color:			@cbf-dark-blue;
 				background-color:	@cbf-content-blue;
@@ -251,7 +251,7 @@
 				.well;
 				.lead;
 
-				padding-left: 70px;
+				padding-left: 74px; /* 15px view-content + 60px views-field - 1px border*/
 			}
 
 			.view-content,
