Replace the DIV of class 'content' with an ARTICLE in Drupal Bootstrap 3.8

--- a/less/content.less
+++ b/less/content.less
@@ -409,222 +409,222 @@
 		padding-top: 0;
 	}
 
-	.content {
+	article {
 		padding: ( @grid-gutter-width / 2);
+	}
 
-		.field-name-field-civievent,
-		.field-name-field-add-to-calendar {
-			position: relative;
+	.field-name-field-civievent,
+	.field-name-field-add-to-calendar {
+		position: relative;
+		float: right;
+		clear: right;
+		width: 50%;
+		padding-left: ( @grid-gutter-width / 2);
+		margin-left: ( @grid-gutter-width / 2);
+
+		a {
+			.badge;
+
+			// Mobile:
+				font-size: @font-size-h4;
+			@media screen and (min-width: 400px) {
+				font-size: @font-size-h2;
+			}
+
+			background-color: @cbf-light-blue;
 			float: right;
-			clear: right;
-			width: 50%;
-			padding-left: ( @grid-gutter-width / 2);
-			margin-left: ( @grid-gutter-width / 2);
+			width: 100%;
+			max-width: 280px;
+			padding: 10px;
+			border-radius: 20px;
+			color: white;
+		}
+
+		.dropdown-menu {
+			margin: 36px 8px 0;
+
+			.dropdown-submenu .dropdown-menu {
+				margin: 0px 8px 0;
+			}
 
 			a {
-				.badge;
-
-				// Mobile:
-					font-size: @font-size-h4;
-				@media screen and (min-width: 400px) {
-					font-size: @font-size-h2;
-				}
-
-				background-color: @cbf-light-blue;
-				float: right;
-				width: 100%;
-				max-width: 280px;
-				padding: 10px;
-				border-radius: 20px;
-				color: white;
-			}
-
-			.dropdown-menu {
-				margin: 36px 8px 0;
-
-				.dropdown-submenu .dropdown-menu {
-					margin: 0px 8px 0;
-				}
-
-				a {
-					font-size: @font-size-h4;
-					background-color: white;
-					float: none;
-					width: auto;
-					max-width: auto;
-					color: @cbf-dark-blue;
-					font-weight: normal;
-				}
-			}
-
-			a + a {
-				margin-top: 15px;
+				font-size: @font-size-h4;
+				background-color: white;
+				float: none;
+				width: auto;
+				max-width: auto;
+				color: @cbf-dark-blue;
+				font-weight: normal;
 			}
 		}
 
-		.field-name-field-civievent + .field-name-field-add-to-calendar {
-			display: none; // Hide Add to calendar if there is a CiviEvent
+		a + a {
+			margin-top: 15px;
 		}
+	}
 
-		.field-name-field-in-activity {
-			font-size: @font-size-h3;
-		}
+	.field-name-field-civievent + .field-name-field-add-to-calendar {
+		display: none; // Hide Add to calendar if there is a CiviEvent
+	}
 
-		.field-name-field-date-text {
-			font-weight: bold;
-		}
+	.field-name-field-in-activity {
+		font-size: @font-size-h3;
+	}
 
-		.field-name-field-image,
-		.field-name-field-series-image {
-			position: relative;
+	.field-name-field-date-text {
+		font-weight: bold;
+	}
+
+	.field-name-field-image,
+	.field-name-field-series-image {
+		position: relative;
+		float: right;
+		clear: right;
+		width: 50%;
+		padding-left: ( @grid-gutter-width / 2);
+		margin-left: ( @grid-gutter-width / 2);
+
+		img {
+			.img-responsive;
+
 			float: right;
-			clear: right;
-			width: 50%;
-			padding-left: ( @grid-gutter-width / 2);
-			margin-left: ( @grid-gutter-width / 2);
-
-			img {
-				.img-responsive;
-
-				float: right;
-			}
 		}
+	}
 
-		.field-name-field-in-activity,
-		.field-name-field-date-text,
-		.field-name-field-episode-date,
-		.field-name-field-image,
-		.field-name-field-series-image,
-		.field-name-field-attachment,
-		.field-name-body,
-		.field-name-field-content,
-		.field-name-field-video,
-		.field-name-field-civievent {
+	.field-name-field-in-activity,
+	.field-name-field-date-text,
+	.field-name-field-episode-date,
+	.field-name-field-image,
+	.field-name-field-series-image,
+	.field-name-field-attachment,
+	.field-name-body,
+	.field-name-field-content,
+	.field-name-field-video,
+	.field-name-field-civievent {
+		margin-bottom: 25px;
+	}
+
+	.field-name-field-topic + .field-name-body,
+	.field-name-field-topics + .field-name-body {
+		margin-top: 25px;
+	}
+
+	.field-name-field-add-to-calendar {
+		margin-bottom: 0px;
+
+		ul {
 			margin-bottom: 25px;
 		}
+	}
 
-		.field-name-field-topic + .field-name-body,
-		.field-name-field-topics + .field-name-body {
-			margin-top: 25px;
+	.field-name-field-video {
+		clear: both;
+	}
+
+	.field-name-field-in-activity + .field-name-field-date-text
+	{
+		margin-top: -25px;
+	}
+
+	.field-name-field-date-text {
+		min-height: 1px; // prevent an empty field causing the 25px margin being lost
+	}
+
+	.field-name-field-speakers,
+	.field-name-field-bible-reference,
+	.field-name-field-episode-date {
+		.field-label {
+			width: 30%;
+		}
+		.field-items {
+			width: 70%;
+		}
+	}
+
+	.field-name-field-topic,
+	.field-name-field-topics {
+		display: inline;
+
+		.field-label {
+			display: none;
 		}
 
-		.field-name-field-add-to-calendar {
-			margin-bottom: 0px;
-
-			ul {
-				margin-bottom: 25px;
-			}
-		}
-
-		.field-name-field-video {
-			clear: both;
-		}
-
-		.field-name-field-in-activity + .field-name-field-date-text
-		{
-			margin-top: -25px;
-		}
-
-		.field-name-field-date-text {
-			min-height: 1px; // prevent an empty field causing the 25px margin being lost
-		}
-
-		.field-name-field-speakers,
-		.field-name-field-bible-reference,
-		.field-name-field-episode-date {
-			.field-label {
-				width: 30%;
-			}
-			.field-items {
-				width: 70%;
-			}
-		}
-
-		.field-name-field-topic,
-		.field-name-field-topics {
+		.field-items {
 			display: inline;
-
-			.field-label {
-				display: none;
-			}
-
-			.field-items {
-				display: inline;
-			}
-
-			.field-item {
-				.badge;
-				display: inline-block;
-				padding: 5px;
-				margin: 0 5px 5px 0;
-				background: @cbf-dark-blue;
-				color: white;
-			}
 		}
 
-		.field-name-field-addthis {
-			.well;
+		.field-item {
+			.badge;
+			display: inline-block;
+			padding: 5px;
+			margin: 0 5px 5px 0;
+			background: @cbf-dark-blue;
+			color: white;
+		}
+	}
 
+	.field-name-field-addthis {
+		.well;
+
+		clear: both;
+		margin-top: 25px;
+		background-color: @cbf-content-blue;
+		border-color: @cbf-sidebar-blue;
+
+		.addthis_button_facebook {
+			clear: left;
+		}
+	}
+
+	.field-name-field-content {
+		.jp-audio {
+			width: 100%;
 			clear: both;
 			margin-top: 25px;
-			background-color: @cbf-content-blue;
-			border-color: @cbf-sidebar-blue;
 
-			.addthis_button_facebook {
-				clear: left;
+			.jp-interface {
+				// Mobile:
+					height: 110px;
+				@media screen and (min-width: 400px) {
+					height: 80px;
+				}
 			}
-		}
 
-		.field-name-field-content {
-			.jp-audio {
-				width: 100%;
-				clear: both;
-				margin-top: 25px;
-
-				.jp-interface {
-					// Mobile:
-						height: 110px;
-					@media screen and (min-width: 400px) {
-						height: 80px;
-					}
+			.jp-mute, .jp-unmute {
+				// Mobile:
+					left: 32px;
+					top: 73px;
+				@media screen and (min-width: 400px) {
+					left: 296px;
+					top: 32px;
 				}
+			}
 
-				.jp-mute, .jp-unmute {
-					// Mobile:
-						left: 32px;
-						top: 73px;
-					@media screen and (min-width: 400px) {
-						left: 296px;
-						top: 32px;
-					}
-				}
-
-				.jp-volume-bar {
-					// Mobile:
-						left: 58px;
-						top: 78px;
-					@media screen and (min-width: 400px) {
-						left: 324px;
-						top: 37px;
-					}
+			.jp-volume-bar {
+				// Mobile:
+					left: 58px;
+					top: 78px;
+				@media screen and (min-width: 400px) {
+					left: 324px;
+					top: 37px;
 				}
 			}
 		}
+	}
 
-		.video-filter {
-			max-width: 100%;
+	.video-filter {
+		max-width: 100%;
 
-			// Mobile
-				width: 408px;
-				height: 228px;
-			@media @normal {
-				width: 617px;
-				height: 346px;
-			}
-			@media @wide {
-				width: 560px;
-				height: 312px;
-			}
+		// Mobile
+			width: 408px;
+			height: 228px;
+		@media @normal {
+			width: 617px;
+			height: 346px;
+		}
+		@media @wide {
+			width: 560px;
+			height: 312px;
 		}
 	}
 
