Remove padding on logo in header

--- a/css/style.css
+++ b/css/style.css
@@ -7338,6 +7338,7 @@ table .checkbox input[type="checkbox"] {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  padding: 0;
 }
 @media (min-width: 768px) {
   #navbar .navbar-header {
