--- a/less/header.less
+++ b/less/header.less
@@ -9,6 +9,8 @@
 		.make-md-column(4);
 		.make-lg-column(4);
 
+		padding: 0;
+
 		.logo {
 			// Mobile:
 				display: inline-block;	/* http://soqr.fr/testsvg/embed-svg-liquid-layout-responsive-web-design.php */
