--- a/css/style.css
+++ b/css/style.css
@@ -10533,7 +10533,7 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
 .field-type-tablefield .tablefield-wrapper .table > tfoot > tr > td {
   border: 0px;
 }
-.field-type-tablefield .tablefield-wrapper .table-striped > tbody > tr:nth-child(2n+1) > td {
+.field-type-tablefield .tablefield-wrapper .table-striped > tbody > tr:nth-child(2n+1) {
   background-color: inherit;
 }
 .form-item,
