--- a/less/content.less
+++ b/less/content.less
@@ -688,7 +688,7 @@
 			}
 		}
 
-		.table-striped > tbody > tr:nth-child(2n+1) > td {
+		.table-striped > tbody > tr:nth-child(2n+1) {
 			background-color: inherit;
 		}
 	}
