--- a/css/style.css
+++ b/css/style.css
@@ -6475,6 +6475,8 @@ button.close {
 .modal-header:after,
 .modal-footer:before,
 .modal-footer:after,
+#navbar .navbar-collapse .region-navigation:before,
+#navbar .navbar-collapse .region-navigation:after,
 .content-region .region-content:before,
 .content-region .region-content:after,
 .field-type-tablefield .tablefield-wrapper .tablefield tbody:before,
@@ -6502,6 +6504,7 @@ button.close {
 .panel-body:after,
 .modal-header:after,
 .modal-footer:after,
+#navbar .navbar-collapse .region-navigation:after,
 .content-region .region-content:after,
 .field-type-tablefield .tablefield-wrapper .tablefield tbody:after,
 .stack:after,
@@ -7330,6 +7333,7 @@ table .checkbox input[type="checkbox"] {
 }
 .navbar {
   border-width: 0px;
+  margin-bottom: 45px;
 }
 #navbar .navbar-header {
   float: left;
@@ -7338,7 +7342,7 @@ table .checkbox input[type="checkbox"] {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  padding: 0;
+  padding-left: 0;
 }
 @media (min-width: 768px) {
   #navbar .navbar-header {
@@ -7380,20 +7384,6 @@ table .checkbox input[type="checkbox"] {
     /* 240px / 1000px * 100% */
   }
 }
-@media screen and (min-width: 992px) {
-  #navbar .navbar-header .logo {
-    width: 85%;
-    padding-bottom: 20.4%;
-    /* 240px / 1000px * 85% */
-  }
-}
-@media screen and (min-width: 1200px) {
-  #navbar .navbar-header .logo {
-    width: 80%;
-    padding-bottom: 19.2%;
-    /* 240px / 1000px * 80% */
-  }
-}
 #navbar .navbar-header .logo object {
   display: block;
   position: absolute;
@@ -7409,10 +7399,13 @@ table .checkbox input[type="checkbox"] {
   height: auto;
 }
 #navbar .navbar-collapse {
+  float: left;
+  width: 100%;
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  padding: 0;
   max-height: none;
 }
 @media (min-width: 768px) {
@@ -7434,71 +7427,163 @@ table .checkbox input[type="checkbox"] {
   }
 }
 #navbar .navbar-collapse.in {
+  overflow-x: hidden;
   overflow-y: hidden;
 }
+#navbar .navbar-collapse.in .city-menu {
+  height: 300px;
+}
+@media screen and (min-width: 768px) {
+  #navbar .navbar-collapse.in .city-menu {
+    height: auto;
+  }
+}
 #navbar .navbar-collapse .navbar-nav {
-  margin: 0;
+  margin-left: 0;
+  padding-left: 15px;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  #navbar .navbar-collapse .navbar-nav {
+    margin-left: 25%;
+    padding-left: 15px;
+    width: 75%;
+  }
 }
 #navbar .navbar-collapse .navbar-nav .active {
   font-weight: bold;
   background-color: inherit;
 }
 #navbar .navbar-collapse .navbar-nav .leaf a {
-  padding: 5px;
-}
-@media screen and (min-width: 768px) {
-  #navbar .navbar-collapse .navbar-nav .leaf a {
-    padding: 18px 5px 0px;
-  }
-}
-@media screen and (min-width: 992px) {
-  #navbar .navbar-collapse .navbar-nav .leaf a {
-    font-size: 18px;
-    padding: 20px 7px 0px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  #navbar .navbar-collapse .navbar-nav .leaf a {
-    font-size: 20px;
-    padding: 24px 10px 0px;
-  }
+  font-size: 20px;
+  padding: 24px 10px 0px;
 }
 #navbar .navbar-collapse .region-navigation {
-  float: right;
-}
-#navbar .navbar-collapse .region-navigation .block-search {
-  margin: 0 0 0 5px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 @media screen and (min-width: 768px) {
-  #navbar .navbar-collapse .region-navigation .block-search .block-panel {
-    margin-top: 15px;
+  #navbar .navbar-collapse .region-navigation {
+    margin-left: -5px;
     margin-right: -15px;
   }
 }
+#navbar .navbar-collapse .region-navigation .city-menu {
+  float: left;
+  width: 50%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  #navbar .navbar-collapse .region-navigation .city-menu {
+    float: left;
+    width: 37.5%;
+  }
+}
+@media (min-width: 992px) {
+  #navbar .navbar-collapse .region-navigation .city-menu {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  #navbar .navbar-collapse .region-navigation .city-menu {
+    float: left;
+    width: 37.5%;
+  }
+}
+@media (min-width: 1200px) {
+  #navbar .navbar-collapse .region-navigation .city-menu {
+    margin-left: 25%;
+  }
+}
+#navbar .navbar-collapse .region-navigation .city-menu .block-panel {
+  margin-top: 45px;
+}
+#navbar .navbar-collapse .region-navigation .city-menu .block-panel .btn-group {
+  width: 100%;
+}
+#navbar .navbar-collapse .region-navigation .city-menu .block-panel .btn-group .btn {
+  width: 100%;
+  height: 35px;
+  border-radius: 6px;
+  font-size: 20px;
+  line-height: 1.33333;
+  padding: 0px 16px;
+}
+#navbar .navbar-collapse .region-navigation .block-search {
+  float: left;
+  width: 50%;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0px;
+}
+@media (min-width: 768px) {
+  #navbar .navbar-collapse .region-navigation .block-search {
+    float: left;
+    width: 62.5%;
+  }
+}
+@media (min-width: 992px) {
+  #navbar .navbar-collapse .region-navigation .block-search {
+    float: left;
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  #navbar .navbar-collapse .region-navigation .block-search {
+    float: left;
+    width: 37.5%;
+  }
+}
+#navbar .navbar-collapse .region-navigation .block-search .block-panel {
+  margin-top: 45px;
+}
 #navbar .navbar-collapse .region-navigation .block-search .block-panel .form-control {
-  color: #777777;
+  height: 35px;
+  color: #989898;
+  border-color: #02426f;
   float: right;
-  width: 244px;
+  width: 100%;
 }
-@media screen and (min-width: 992px) {
-  #navbar .navbar-collapse .region-navigation .block-search .block-panel .form-control {
-    width: 254px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  #navbar .navbar-collapse .region-navigation .block-search .block-panel .form-control {
-    width: 224px;
-  }
+#navbar .navbar-collapse .region-navigation .block-search .block-panel .form-group {
+  margin-bottom: 0;
 }
 #navbar .navbar-collapse .region-navigation .block-search .block-panel .btn {
+  height: 35px;
   color: white;
 }
-.city-adelaide .menu-adelaide,
-.city-brisbane .menu-brisbane,
-.city-canberra .menu-canberra,
-.city-melbourne .menu-melbourne,
-.city-perth .menu-perth,
-.city-sydney .menu-sydney {
+.city-adelaide .menu-home,
+.city-brisbane .menu-home,
+.city-canberra .menu-home,
+.city-melbourne .menu-home,
+.city-perth .menu-home,
+.city-sydney .menu-home {
+  display: none;
+}
+.menu-adelaide,
+.menu-brisbane,
+.menu-canberra,
+.menu-melbourne,
+.menu-perth,
+.menu-sydney {
+  display: none;
+}
+.menu-home,
+.city-adelaide .city-menu .menu-adelaide,
+.city-brisbane .city-menu .menu-brisbane,
+.city-canberra .city-menu .menu-canberra,
+.city-melbourne .city-menu .menu-melbourne,
+.city-perth .city-menu .menu-perth,
+.city-sydney .city-menu .menu-sydney {
+  display: inline;
+  margin-right: 15px;
   font-weight: bold;
 }
 #page-header .region-header {
