--- a/less/header.less
+++ b/less/header.less
@@ -1,5 +1,6 @@
 .navbar {
 	border-width: 0px;
+	margin-bottom: 45px;
 }
 
 #navbar {
@@ -9,7 +10,7 @@
 		.make-md-column(4);
 		.make-lg-column(4);
 
-		padding: 0;
+		padding-left: 0;
 
 		.logo {
 			// Mobile:
@@ -23,15 +24,7 @@
 			}
 			@media @tablet {
 				width: 100%;
-				padding-bottom: 24%;	/* 240px / 1000px * 100% */
-			}
-			@media @normal {
-				width: 85%;
-				padding-bottom: 20.4%;	/* 240px / 1000px * 85% */
-			}
-			@media @wide {
-				width: 80%;
-				padding-bottom: 19.2%;	/* 240px / 1000px * 80% */
+				padding-bottom: 24%;   /* 240px / 1000px * 100% */
 			}
 			
 			object {
@@ -50,18 +43,37 @@
 	}
 
 	.navbar-collapse {
+		.make-xs-column(12);
 		.make-sm-column(8);
 		.make-md-column(8);
 		.make-lg-column(8);
 
+		padding: 0;
 		max-height: none;
 		
 		&.in {
+			overflow-x: hidden;
 			overflow-y: hidden;
+
+			.city-menu {
+				// Mobile
+					height: 300px;
+				@media @tablet {
+					height: auto;
+				}
+			}
 		}
 
 		.navbar-nav {
-			margin: 0;
+			// Mobile:
+				margin-left: 0;
+				padding-left: 15px;
+				width: 100%;
+			@media @wide {
+				margin-left: 25%;
+				padding-left: 15px;
+				width: 75%;
+			}
 
 			.active {
 				font-weight: bold;
@@ -70,51 +82,73 @@
 
 			.leaf {
 				a {
-					// Mobile:
-						padding: 5px;
-					@media @tablet {
-						padding: 18px 5px 0px;
-					}
-					@media @normal {
-						font-size: @font-size-h3;
-						padding: 20px 7px 0px;
-					}
-					@media @wide {
-						font-size: @font-size-h2;
-						padding: 24px 10px 0px;
-					}
+					font-size: @font-size-h2;
+					padding: 24px 10px 0px;
 				}
 			}
 		}
 
 		.region-navigation {
-			float: right;
+			.make-row();
 
-			.block-search {
-				margin: 0 0 0 5px;
+			// Mobile:
+				margin-left: 0px;
+				margin-right: 0px;
+			@media @tablet {
+				margin-left: -5px;
+				margin-right: (@grid-gutter-width / -2);
+			}
+
+			.city-menu {
+				.make-xs-column(6);
+				.make-sm-column(3*12/8);
+				.make-md-column(6);
+				.make-lg-column(3*12/8);
+				.make-lg-column-offset(2*12/8);
 
 				.block-panel {
-					@media @tablet {
-						margin-top: 15px;
-						margin-right: -15px;
+					margin-top: 45px;
+
+					.btn-group {
+						width: 100%;
+
+						.btn {
+							width: 100%;
+							height: 35px;
+							border-radius: 6px;
+							font-size: 20px;
+							line-height: 1.33333;
+							padding: 0px 16px;
+						}
 					}
+				}
+			}
+
+			.block-search {
+				.make-xs-column(6);
+				.make-sm-column(5*12/8);
+				.make-md-column(6);
+				.make-lg-column(3*12/8);
+
+				margin: 0px;
+
+				.block-panel {
+					margin-top: 45px;
 
 					.form-control {
-						color: @gray-light;
+						height: 35px;
+						color: @cbf-light-grey;
+						border-color: @cbf-dark-blue;
 						float: right;
+						width: 100%;
+					}
 
-						// Mobile
-						// @media @tablet
-							width: 244px; 
-						@media @normal {
-							width: 254px;
-						}
-						@media @wide {
-							width: 224px;
-						}
+					.form-group {
+						margin-bottom: 0;
 					}
 
 					.btn {
+						height: 35px;
 						color: white;
 					}
 				}
@@ -123,12 +157,35 @@
 	}
 }
 
-.city-adelaide 	.menu-adelaide,
-.city-brisbane  .menu-brisbane,
-.city-canberra  .menu-canberra,
-.city-melbourne .menu-melbourne,
-.city-perth     .menu-perth,
-.city-sydney    .menu-sydney {
+.city-adelaide,
+.city-brisbane,
+.city-canberra,
+.city-melbourne,
+.city-perth,
+.city-sydney {
+	.menu-home {
+		display: none;
+	}
+}
+
+.menu-adelaide,
+.menu-brisbane,
+.menu-canberra,
+.menu-melbourne,
+.menu-perth,
+.menu-sydney {
+	display: none;
+}
+
+.menu-home,
+.city-adelaide  .city-menu .menu-adelaide,
+.city-brisbane  .city-menu .menu-brisbane,
+.city-canberra  .city-menu .menu-canberra,
+.city-melbourne .city-menu .menu-melbourne,
+.city-perth     .city-menu .menu-perth,
+.city-sydney    .city-menu .menu-sydney {
+	display: inline;
+	margin-right: 15px;
 	font-weight: bold;
 }
 
