Pad around the CiviCRM container so there is a full gutter width gap to other content

--- a/less/content.less
+++ b/less/content.less
@@ -371,6 +371,8 @@
 	.block-panel {
 		.crm-container,
 		.crm-container-snippet {
+			padding: (@grid-gutter-width / 2);
+
 			.crm-section {
 				.label {
 					color: inherit;
@@ -383,7 +385,7 @@
 
 					.crm-marker {
 						float: right;
-						margin-right: -( @grid-gutter-width / 2);
+						margin-right: -(@grid-gutter-width / 2);
 					}
 				}
 
