--- a/css/style.css
+++ b/css/style.css
@@ -9978,6 +9978,14 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   color: #02426f;
   background-color: #d8eaf9;
 }
+.content-region .block-panel .crm-container,
+.sidebar-1-region .block-panel .crm-container,
+.sidebar-2-region .block-panel .crm-container,
+.content-region .block-panel .crm-container-snippet,
+.sidebar-1-region .block-panel .crm-container-snippet,
+.sidebar-2-region .block-panel .crm-container-snippet {
+  padding: 15px;
+}
 .content-region .block-panel .crm-container .crm-section .label,
 .sidebar-1-region .block-panel .crm-container .crm-section .label,
 .sidebar-2-region .block-panel .crm-container .crm-section .label,
