--- a/css/style.css
+++ b/css/style.css
@@ -7454,8 +7454,10 @@ table .checkbox input[type="checkbox"] {
   font-weight: bold;
   background-color: inherit;
 }
-#navbar .navbar-collapse .navbar-nav .leaf {
-  float: right;
+@media screen and (min-width: 768px) {
+  #navbar .navbar-collapse .navbar-nav .leaf {
+    float: right;
+  }
 }
 #navbar .navbar-collapse .navbar-nav .leaf a {
   font-size: 20px;
