--- a/css/style.css
+++ b/css/style.css
@@ -7446,7 +7446,6 @@ table .checkbox input[type="checkbox"] {
 @media screen and (min-width: 1200px) {
   #navbar .navbar-collapse .navbar-nav {
     margin-left: 25%;
-    padding-left: 15px;
     width: 75%;
   }
 }
@@ -7461,7 +7460,7 @@ table .checkbox input[type="checkbox"] {
 }
 #navbar .navbar-collapse .navbar-nav .leaf a {
   font-size: 20px;
-  padding: 24px 10px 0px;
+  padding: 25px 0px 0px 30px;
 }
 #navbar .navbar-collapse .region-navigation {
   margin-left: -15px;
