Stop using @cbf-sidebar-blue in favour of @cbf-dark-blue to ensure colour consistency

--- a/css/style.css
+++ b/css/style.css
@@ -8566,7 +8566,7 @@ a.content-region .block-views .block-panel .more-link:focus {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  border-color: #1a3867;
+  border-color: #02426f;
   margin-bottom: 25px;
 }
 .sidebar-1-region .block-views .block-panel > .list-group,
@@ -8846,35 +8846,35 @@ a.content-region .block-views .block-panel .more-link:focus {
 .sidebar-1-region .block-views .block-panel > .panel-heading,
 .sidebar-2-region .block-views .block-panel > .panel-heading {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel > .panel-heading + .panel-collapse > .panel-body,
 .sidebar-2-region .block-views .block-panel > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel > .panel-heading .badge,
 .sidebar-2-region .block-views .block-panel > .panel-heading .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .sidebar-1-region .block-views .block-panel > .panel-footer + .panel-collapse > .panel-body,
 .sidebar-2-region .block-views .block-panel > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #1a3867;
+  border-bottom-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel .block-title,
 .sidebar-2-region .block-views .block-panel .block-title {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel .block-title + .panel-collapse > .panel-body,
 .sidebar-2-region .block-views .block-panel .block-title + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel .block-title .badge,
 .sidebar-2-region .block-views .block-panel .block-title .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .sidebar-1-region .block-views .block-panel .block-title a,
@@ -8895,7 +8895,7 @@ a.content-region .block-views .block-panel .more-link:focus {
   text-align: center;
   background-color: #777777;
   border-radius: 10px;
-  background-color: #1a3867;
+  background-color: #02426f;
 }
 .sidebar-1-region .block-views .block-panel .more-link:empty,
 .sidebar-2-region .block-views .block-panel .more-link:empty {
@@ -8955,7 +8955,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  border-color: #1a3867;
+  border-color: #02426f;
   margin-bottom: 25px;
 }
 .sidebar-1-region .block-block .block-panel > .list-group,
@@ -9235,35 +9235,35 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-1-region .block-block .block-panel > .panel-heading,
 .sidebar-2-region .block-block .block-panel > .panel-heading {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .sidebar-1-region .block-block .block-panel > .panel-heading + .panel-collapse > .panel-body,
 .sidebar-2-region .block-block .block-panel > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .sidebar-1-region .block-block .block-panel > .panel-heading .badge,
 .sidebar-2-region .block-block .block-panel > .panel-heading .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .sidebar-1-region .block-block .block-panel > .panel-footer + .panel-collapse > .panel-body,
 .sidebar-2-region .block-block .block-panel > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #1a3867;
+  border-bottom-color: #02426f;
 }
 .sidebar-1-region .block-block .block-panel .block-title,
 .sidebar-2-region .block-block .block-panel .block-title {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .sidebar-1-region .block-block .block-panel .block-title + .panel-collapse > .panel-body,
 .sidebar-2-region .block-block .block-panel .block-title + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .sidebar-1-region .block-block .block-panel .block-title .badge,
 .sidebar-2-region .block-block .block-panel .block-title .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .sidebar-1-region .block-block .block-panel .block-title a,
@@ -9396,7 +9396,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   /* 15px view-content + 60px views-field - 1px border*/
   color: #02426f;
   background-color: #d8eaf9;
-  border-color: #1a3867;
+  border-color: #02426f;
 }
 .content-region .block-views .block-panel .view-national-library .view-header blockquote,
 .sidebar-1-region .block-views .block-panel .view-national-library .view-header blockquote,
@@ -10298,7 +10298,7 @@ a.content-region .block-system .block-panel .field-name-field-topics .field-item
   clear: both;
   margin-top: 25px;
   background-color: #d8eaf9;
-  border-color: #1a3867;
+  border-color: #02426f;
 }
 .content-region .block-system .block-panel .field-name-field-addthis blockquote {
   border-color: #ddd;
@@ -10433,7 +10433,7 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  border-color: #1a3867;
+  border-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .list-group,
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-collapse > .list-group {
@@ -10603,29 +10603,29 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-heading {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-heading .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #1a3867;
+  border-bottom-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead {
   color: #ffffff;
-  background-color: #1a3867;
-  border-color: #1a3867;
+  background-color: #02426f;
+  border-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead + .panel-collapse > .panel-body {
-  border-top-color: #1a3867;
+  border-top-color: #02426f;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead .badge {
-  color: #1a3867;
+  color: #02426f;
   background-color: #ffffff;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead a {
@@ -10786,7 +10786,7 @@ textarea.webform-component input.email {
   text-align: center;
   background-color: #777777;
   border-radius: 10px;
-  background-color: #1a3867;
+  background-color: #02426f;
   font-size: 14px;
   padding: 6px 12px;
 }
