--- a/less/content.less
+++ b/less/content.less
@@ -98,7 +98,7 @@
 .sidebar-1-region, .sidebar-2-region {
 	.block-views .block-panel {
 		.panel;
-		.panel-variant(@cbf-sidebar-blue; white; @cbf-sidebar-blue; @cbf-sidebar-blue);
+		.panel-variant(@cbf-dark-blue; white; @cbf-dark-blue; @cbf-dark-blue);
 
 		margin-bottom: 25px;
 
@@ -113,7 +113,7 @@
 		.more-link {
 			.badge;
 
-			background-color: @cbf-sidebar-blue;
+			background-color: @cbf-dark-blue;
 
 			a {
 				color: white;
@@ -123,7 +123,7 @@
 
 	.block-block .block-panel {
 		.panel;
-		.panel-variant(@cbf-sidebar-blue; white; @cbf-sidebar-blue; @cbf-sidebar-blue);
+		.panel-variant(@cbf-dark-blue; white; @cbf-dark-blue; @cbf-dark-blue);
 
 		margin-bottom: 25px;
 
@@ -199,7 +199,7 @@
 
 				color:			@cbf-dark-blue;
 				background-color:	@cbf-content-blue;
-				border-color:		@cbf-sidebar-blue;
+				border-color:		@cbf-dark-blue;
 			}
 
 			.view-city-to-activity .field-name-field-add-to-calendar {
@@ -568,7 +568,7 @@
 		clear: both;
 		margin-top: 25px;
 		background-color: @cbf-content-blue;
-		border-color: @cbf-sidebar-blue;
+		border-color: @cbf-dark-blue;
 
 		.addthis_button_facebook {
 			clear: left;
@@ -664,7 +664,7 @@
 	.tablefield-wrapper {
 		.tablefield {
 			.panel;
-			.panel-variant(@cbf-sidebar-blue; white; @cbf-sidebar-blue; @cbf-sidebar-blue);
+			.panel-variant(@cbf-dark-blue; white; @cbf-dark-blue; @cbf-dark-blue);
 
 			thead {
 				.panel-heading;
@@ -771,7 +771,7 @@
 .link-button {
 	.badge;
 
-	background-color: @cbf-sidebar-blue;
+	background-color: @cbf-dark-blue;
 	font-size: @font-size-base;
 	padding: 6px 12px;				
 
